<resources>
    <string name="app_name">SmartCityAndroid</string>
    <string name="connection">Connection</string>
    <string name="inscription">Inscription</string>
    <string name="question">Question</string>
    <string name="num_ro_de_l_annonce">Numéro de l\'annonce :</string>
    <string name="perdu">Perdu</string>
    <string name="trouv">Trouvé</string>
    <string name="a_adopter">A adopter</string>
    <string name="image">image</string>
    <string name="nameApp">AnimaLost</string>
    <string name="login">Login :</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="contact">Contact</string>
    <string name="connectionLabel">Connection</string>
    <string name="inscriptionLabel">Inscription</string>
    <string name="mot_de_passe">Mot de passe :</string>
    <string name="email">Email :</string>
    <string name="confirmer">Confirmer</string>
    <string name="trouve">Trouvé</string>
    <string name="disconnectMessage">Vous avez été déconnecté</string>
    <string name="ajout_animal">Ajout animal</string>
    <string name="nameUser">nameUser</string>
    <string name="errorException">Une erreur inattendue est survenue</string>
    <string name="errorAddAnnouncement">Une erreur est survenue lors de l\'ajout de l\'annonce</string>
    <string name="errorInputField">Il semblerait que vous n\'ayez pas rempli tout les champs correctement</string>
    <string name="errorNoConnected">Il semblerait que vous n\'êtes pas connecté</string>
    <string name="errorAddAnimal">Une erreur est survenue lors de la création de votre animal</string>
    <string name="errorJson">Erreur json rencontrée</string>
    <string name="inscriptionRight">Vous avez été bien inscrit</string>
    <string name="userNameAlreadyExist">Ce nom de user est déja utilisé</string>
    <string name="errorServor">Une erreur coté serveur est survenue</string>
    <string name="errorInscription">Il s\'est produit une erreur pendant votre inscription</string>
    <string name="errorTelephone">Le numéro de téléphone ne doit contenir rien d\'autre que des chiffres</string>
    <string name="errorAdresseMail">Tous les champs a l\'exception de l\'adresse email sont obligatoire</string>
</resources>
