<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/loginView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login"
        android:layout_alignParentStart="true"
        android:layout_marginStart="68dp"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="visible" />

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="34dp"
        android:layout_marginTop="131dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/login"
        android:layout_marginTop="195dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/passwordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password"
        android:layout_toStartOf="@+id/login"
        android:text="@string/mot_de_passe"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/confirmationButton"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="139dp"
        android:layout_height="68dp"
        android:layout_below="@+id/password"
        android:layout_toEndOf="@+id/loginView"
        android:text="@string/confirmer" />
</RelativeLayout>