<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/loginView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginInscrption"
        android:layout_alignStart="@+id/mailView"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/passwordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="93dp"
        android:text="@string/mot_de_passe"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/mailView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/emailInscription"
        android:layout_alignParentStart="true"
        android:layout_marginStart="49dp"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/phoneView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/loginView"
        android:layout_marginTop="220dp"
        android:text="Téléphone :"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/loginInscrption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/passwordInscription"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse" />

    <EditText
        android:id="@+id/passwordInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passwordView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/emailInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/loginInscrption"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/phoneInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/phoneView"
        android:layout_alignStart="@+id/loginInscrption"
        android:ems="10"
        android:inputType="phone" />

    <Button
        android:id="@+id/inscriptionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="164dp"
        android:text="@string/confirmer" />
</RelativeLayout>